--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.2.5",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "eslint": "^8.48.0",
+    "eslint-plugin-jest": "^27.2.3",
+    "eslint-plugin-jest-formatting": "^3.1.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3",
