--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
     "parserOptions": {
         "ecmaVersion": 2018,
         "sourceType": "module",
-        "project": "/Users/tw/VsCodeWorkspace/SMU-Project/ta-management-system/nodejs-backend/tsconfig.json"
+        "project": "${workspaceFolder:nodejs-backend}/tsconfig.json"
     },
     "parser": "@typescript-eslint/parser",
     "plugins": [
