--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-rest",
   "version": "1.0.0",
-  "description": "nodejs backend template based on Express",
+  "description": "nodejs backend for CS7328 TA-MGMT team project",
   "main": "dist",
   "scripts": {
     "start": "node dist/server.js",
@@ -12,18 +12,23 @@
   "keywords": [
     "Software Engineering"
   ],
-  "author": "Junhao Shen <junhaos@smu.edu>",
+  "author": "Zhimin Wang <zhiminw@smu.edu>",
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^4.15.0",
     "express": "^4.18.2",
+    "humps": "^2.0.1",
+    "joi": "^17.10.1",
+    "luxon": "^3.4.2",
     "mysql2": "^3.3.3",
     "prisma": "^4.15.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
+    "@types/humps": "^2.0.3",
     "@types/jest": "^29.5.2",
+    "@types/luxon": "^3.3.2",
     "@types/node": "^20.2.5",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
